--- a/app/src/main/res/layout/activity_blur_demo.xml
+++ b/app/src/main/res/layout/activity_blur_demo.xml
@@ -7,7 +7,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.addbean.demo.autilsdemo.demo.BlurDemoActivity">
+    tools:context=".demo.effect.BlurDemoActivity">
 
     <TextView
         android:id="@+id/tv_1"
