--- a/app/src/main/res/layout/fragment_content.xml
+++ b/app/src/main/res/layout/fragment_content.xml
@@ -5,7 +5,7 @@
     android:background="#ffffffff"
     android:orientation="vertical">
 
-    <com.addbean.demo.autilsdemo.demo.adynamic_fragment.CustomScrollView
+    <com.addbean.demo.autilsdemo.demo.views.adynamic_fragment.CustomScrollView
         android:id="@+id/scroll_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -46,6 +46,6 @@
                 android:src="@drawable/ic_launcher" />
 
         </LinearLayout>
-    </com.addbean.demo.autilsdemo.demo.adynamic_fragment.CustomScrollView>
+    </com.addbean.demo.autilsdemo.demo.views.adynamic_fragment.CustomScrollView>
 
 </FrameLayout>
