--- a/app/src/main/res/layout/item_image_cache.xml
+++ b/app/src/main/res/layout/item_image_cache.xml
@@ -6,8 +6,8 @@
 
     <ImageView
         android:id="@+id/image_1"
-        android:layout_width="100dp"
-        android:layout_height="100dp" />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 
     <ImageView
         android:id="@+id/image_2"
