--- a/autils/app/src/main/res/layout/activity_http_demo.xml
+++ b/autils/app/src/main/res/layout/activity_http_demo.xml
@@ -19,6 +19,15 @@
             android:gravity="center"
             android:textColor="@color/color_black"
             android:text="写入测试" />
+        <TextView
+            android:id="@+id/text_rewrite"
+            android:layout_width="100dp"
+            android:layout_height="40dp"
+            android:layout_marginTop="8dp"
+            android:background="@color/color_white"
+            android:gravity="center"
+            android:textColor="@color/color_black"
+            android:text="覆盖测试" />
 
         <TextView
             android:id="@+id/text_read"
